# xray-manager

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  build_sidecar.py  config_gen.py  docker-compose.yml  docker-install.sh  install.sh  main.py  requirements.txt  sidecar_entry.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsh  uninstall.nsh
src-tauri/src/: lib.rs  main.rs
static/: index.html
static/css/: style.css
static/js/: foundation.js  interface.js
