[package]
name = "xray-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "xray_manager"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
